# kura

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
docs/: non_goals.md  storage_format.md
src/: binary.rs  bootstrap.rs  db.rs  error.rs  filename.rs  internal_key.rs  lib.rs  lock.rs  manifest.rs  options.rs  platform.rs  sequence.rs  test_utils.rs
src/db/: classify.rs
src/manifest/: codec.rs  current.rs  state.rs
src/platform/: lock.rs  unix.rs  windows.rs
src/platform/lock/: native.rs  unix.rs  windows.rs
src/platform/sync/: unix.rs  windows.rs
tests/: open.rs
